rpi5/notifiarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notifiarr
  labels:
    app: notifiarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifiarr
  serviceName: notifiarr
  template:
    metadata:
      name: notifiarr
      labels:
        app: notifiarr
    spec:
      containers:
        - name: notifiarr
          image: golift/notifiarr:v0.9.7@sha256:2b0a8784d8a43177cbc5a19110e7eb066d9321572c3352eda79c0a89898c7735
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5454
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
