rpi5/notifiarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifiarr
spec:
  selector:
    app: notifiarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
